Fix spacing between selected session and player list

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ div.session.berserker {
   border-color: #e7e7e7;
   border-radius: 4px;
   border: 1px solid;
+  margin-bottom: 12px;
 }
 
 div.session.berserker > p {
